// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders extended FAB 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 11,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 12,
      },
      Array [
        Object {
          "backgroundColor": "#ff4081",
          "elevation": 12,
        },
        Object {
          "borderRadius": 28,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 28,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "height": 48,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        pointerEvents="none"
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, .54)",
              "fontSize": 24,
            },
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "marginHorizontal": 8,
              },
              Object {
                "color": "rgba(0, 0, 0, .54)",
                "fontFamily": "HelveticaNeue-Medium",
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        ADD ITEMS
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders normal FAB 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 11,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 12,
      },
      Array [
        Object {
          "backgroundColor": "#ff4081",
          "elevation": 12,
        },
        Object {
          "borderRadius": 28,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 28,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "height": 56,
            "width": 56,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        pointerEvents="none"
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, .54)",
              "fontSize": 24,
            },
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders small FAB 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 11,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 12,
      },
      Array [
        Object {
          "backgroundColor": "#ff4081",
          "elevation": 12,
        },
        Object {
          "borderRadius": 28,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 28,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        pointerEvents="none"
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, .54)",
              "fontSize": 24,
            },
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
